--- a/stylesheet.less
+++ b/stylesheet.less
@@ -478,6 +478,10 @@ footer .footer-profile {
     width: 100%;
 }
 
+.widget.feature .feature-bgimg {
+	background-position: center 50%;
+}
+
 .widget.feature .feature-bgimg .content {
 	vertical-align: bottom;
 }
